Try two-tiered approach to avoid duplicate checks

--- a/.github/workflows/review-check-trigger.yaml
+++ b/.github/workflows/review-check-trigger.yaml
@@ -7,3 +7,9 @@ on:
 
 
 jobs:
+  trigger-review-check:
+    name: Trigger review check
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: echo 'Triggering review check...'
