--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -1,6 +1,8 @@
 name: Review Status
 
-on: [pull_request_review, pull_request_target]
+on:
+  pull_request_review:
+  pull_request_target:
 
 
 jobs:
