--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -77,6 +77,8 @@ jobs:
           print(f"::set-output name=approved::{approved}")
           '
 
+      - run: echo '${{ github.event.pull_request.labels }}'
+
       - name: Remove "waiting for core dev approval" if a core dev approved this PR
         if: >-
           steps.core_dev_reviews.outputs.approved == 'true' &&
