--- a/.github/workflows/review-check.yaml
+++ b/.github/workflows/review-check.yaml
@@ -77,12 +77,12 @@ jobs:
           print(f"::set-output name=approved::{approved}")
           '
 
-      - run: echo '${{ github.event.pull_request.labels }}'
+      - run: echo '${{ join(github.event.pull_request.labels.*.name, ", ") }}'
 
       - name: Remove "waiting for core dev approval" if a core dev approved this PR
         if: >-
           steps.core_dev_reviews.outputs.approved == 'true' &&
-          contains(github.event.pull_request.labels, 'waiting for core dev approval')
+          contains(github.event.pull_request.labels.*.name, 'waiting for core dev approval')
         uses: octokit/request-action@v2.x
         with:
           route: DELETE /repos/:repository/issues/:number/labels/:label
