--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -4,6 +4,7 @@ on:
   pull_request_review:
     types: ["submitted", "dismissed"]
   pull_request_target:
+    types: ["opened", "edited", "reopened", "synchronize", "ready_for_review"]
 
 
 jobs:
