--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -2,9 +2,15 @@ name: Review Check
 
 on:
   pull_request_review:
-    types: ["submitted", "dismissed"]
+    types:
+      - submitted
+      - dismissed
   pull_request_target:
-    types: ["opened", "edited", "reopened", "synchronize", "ready_for_review"]
+    types:
+      - opened
+      - edited
+      - reopened
+      - synchronize
 
 
 jobs:
