--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -102,10 +102,9 @@ jobs:
 
       - name: Remove "waiting for core dev approval" if a core dev approved this PR
         if: steps.core_dev_reviews.outputs.approved == 'false'
-        continue-on-error: true
         uses: octokit/request-action@v2.x
         with:
-          route: POST /repos/:repository/issues/:number/labels/
+          route: POST /repos/:repository/issues/:number/labels
           repository: ${{ github.repository }}
           number: ${{ github.event.pull_request.number }}
           label: waiting for core dev approval
