--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -93,7 +93,7 @@ jobs:
         with:
           route: /repos/:repository/statuses/:sha
           repository: ${{ github.repository }}
-          sha: ${{ github.sha }}
+          sha: ${{ github.event.after }}
           state: ${{ steps.core_dev_reviews.outputs.approval_check }}
           description: At least one core developer needs to approve this PR
           context: Core Dev Review
@@ -106,7 +106,7 @@ jobs:
         with:
           route: /repos/:repository/statuses/:sha
           repository: ${{ github.repository }}
-          sha: ${{ github.sha }}
+          sha: ${{ github.event.after }}
           state: success
           description: At least one core developer needs to approve this PR
           context: Core Dev Review
