--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -5,7 +5,7 @@ on:
     types:
       - submitted
       - dismissed
-  pull_request_target:
+  pull_request:
 
 
 jobs:
@@ -88,7 +88,7 @@ jobs:
           '
 
       - name: Add "waiting for core dev approval" if no core dev has approved yet
-        if: github.event_name == 'pull_request_target'
+        if: github.event_name == 'pull_request'
         uses: octokit/request-action@v2.x
         with:
           route: /repos/:repository/statuses/:sha
