--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -88,7 +88,7 @@ jobs:
           '
 
       - name: Add "success" status as this PR has a Core Dev Approval
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request_target'
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/statuses/:sha
