--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -94,7 +94,7 @@ jobs:
           route: POST /repos/:repository/statuses/:sha
           repository: ${{ github.repository }}
           sha: ${{ github.event.pull_request.head.sha }}
-          state: ${{ steps.core_dev_reviews.outputs.approval_check }}
+          state: success
           description: At least one core developer needs to approve this PR
           context: Core Dev Approval
         env:
@@ -107,7 +107,7 @@ jobs:
           route: POST /repos/:repository/statuses/:sha
           repository: ${{ github.repository }}
           sha: ${{ github.event.pull_request.head.sha }}
-          state: success
+          state: failure
           description: At least one core developer needs to approve this PR
           context: Core Dev Approval
         env:
