--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -107,7 +107,7 @@ jobs:
           route: POST /repos/:repository/statuses/:sha
           repository: ${{ github.repository }}
           sha: ${{ github.event.pull_request.head.sha }}
-          state: failure
+          state: pending
           description: At least one core developer needs to approve this PR
           context: Core Dev Approval
         env:
