--- a/.github/workflows/review-approval-check.yaml
+++ b/.github/workflows/review-approval-check.yaml
@@ -35,7 +35,7 @@ jobs:
                 }
               }
             }
-          respotiroy: bot
+          repository: bot
           pr: 1305
 #          repository: ${{ github.event.repository.name }}
 #          pr: ${{ github.event.pull_request.number }}
