--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,6 +12,6 @@ jobs:
 
     steps:
       - name: Greeter
-        uses: SebastiaanZ/playground@main
+        uses: SebastiaanZ/actions-playground@main
         with:
           who-to-greet: Sebastiaan
