--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,5 +12,6 @@ jobs:
 
     steps:
       - name: Greeter
-        uses: SebastiaanZ/discord-status-embed@main
-
+        uses: SebastiaanZ/github-status-embed-for-discord@main
+        with:
+          name: Sebastiaan
