--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Greeter
+      - name: Test Docker-based action
         uses: SebastiaanZ/github-status-embed-for-discord@main
         with:
           name: Sebastiaan
