--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -13,14 +13,17 @@ jobs:
 
     steps:
       - name: GitHub Actions Status Embed for Discord
+        # For a `pull_request` we always want to send a status embed
+        # here. For a push event, only when this workflow is the last
+        # in the sequence because it failed or was cancelled.
         if: github.event_name == 'pull_request' || cancelled() || failure()
-        uses: SebastiaanZ/github-status-embed-for-discord@main
+        uses: SebastiaanZ/github-status-embed-for-discord@v0.1.1
         with:
           # Discord webhook
           webhook_id: '622392658211504157'
           webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
 
-          # Information about the current workflow
+          # Workflow information
           workflow_name: ${{ github.workflow }}
           run_id: ${{ github.run_id }}
           run_number: ${{ github.run_number }}
@@ -30,11 +33,8 @@ jobs:
           ref: ${{ github.ref }}
           sha: ${{ github.sha }}
 
-          # Optional arguments for PR-related events
-          # Note: There's no harm in including these lines for non-PR
-          # events, as non-existing paths in objects will evaluate to
-          # `null` silently and the github status embed action will
-          # treat them as absent.
+          # Optional PR-information. These values will be "null" if
+          # the event trigger was not PR-related.
           pr_author_login: ${{ github.event.pull_request.user.login }}
           pr_number: ${{ github.event.pull_request.number }}
           pr_title: ${{ github.event.pull_request.title }}
