--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,33 +12,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Induced failure
-        run: exit 1
+      steps:
+        - name: GitHub API Request
+          uses: octokit/request-action@v2.0.2
+          id: pull_request
+          with:
+            route: GET /repos/{repository}/pulls
+            repository: ${{ github.repository }}
+            state: open
+            head: ${{format(
+              '{0}:{1}',
+              github.event.workflow_run.head_repository.owner.login,
+              github.event.workflow_run.head_branch
+              )}}
+            sort: updated
+            direction: desc
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: GitHub Actions Status Embed for Discord
-        # For a `pull_request` we always want to send a status embed
-        # here. For a push event, only when this workflow is the last
-        # in the sequence because it failed or was cancelled.
-        if: github.event_name == 'pull_request' || cancelled() || failure()
-        uses: SebastiaanZ/github-status-embed-for-discord@v0.1.1
-        with:
-          # Discord webhook
-          webhook_id: '622392658211504157'
-          webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
-
-          # Workflow information
-          workflow_name: ${{ github.workflow }}
-          run_id: ${{ github.run_id }}
-          run_number: ${{ github.run_number }}
-          status: ${{ job.status }}
-          actor: ${{ github.actor }}
-          repository:  ${{ github.repository }}
-          ref: ${{ github.ref }}
-          sha: ${{ github.sha }}
-
-          # Optional PR-information. These values will be "null" if
-          # the event trigger was not PR-related.
-          pr_author_login: ${{ github.event.pull_request.user.login }}
-          pr_number: ${{ github.event.pull_request.number }}
-          pr_title: ${{ github.event.pull_request.title }}
-          pr_source: ${{ github.event.pull_request.head.label }}
+        - name: Echo output
+          run: |
+            echo '${{ fromJson(steps.pull_request.outputs.data)[0].user.login }}'
+            echo '${{ fromJson(steps.pull_request.outputs.data)[0].number }}'
+            echo '${{ fromJson(steps.pull_request.outputs.data)[0].title }}'
+            echo '${{ fromJson(steps.pull_request.outputs.data)[0].head.label }}'
