--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,11 +19,7 @@ jobs:
           route: GET /repos/{repository}/pulls
           repository: ${{ github.repository }}
           state: open
-          head: ${{format(
-            '{0}:{1}',
-            github.event.workflow_run.head_repository.owner.login,
-            github.event.workflow_run.head_branch
-            )}}
+          head: SebastiaanZ:discord-embed-test
           sort: updated
           direction: desc
         env:
