--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,7 +16,8 @@ jobs:
         uses: octokit/request-action@v2.0.2
         id: pull_request
         with:
-          route: GET /repos/SebastiaanZ/actions-playground/pulls
+          route: GET /repos/{repo}/pulls
+          repo: ${{ github.repository }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
