--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   embed-tester:
@@ -12,22 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: GitHub API Request
+      - name: Get Pull Request Information
+        if: github.event.workflow_run.event == 'pull_request'
         uses: octokit/request-action@v2.0.2
         id: pull_request
         with:
-          route: GET /repos/{repository}/pulls
-          repository: ${{ github.repository }}
+          route: GET /repos/{owner}/{repo}/pulls
+          owner: python-discord
+          repo: sir-lancebot
           state: open
-          head: SebastiaanZ:discord-embed-test
+          head: RohanJnr:error_handler_changes
           sort: updated
           direction: desc
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Echo output
-        run: |
-          echo '${{ fromJson(steps.pull_request.outputs.data)[0].user.login }}'
-          echo '${{ fromJson(steps.pull_request.outputs.data)[0].number }}'
-          echo '${{ fromJson(steps.pull_request.outputs.data)[0].title }}'
-          echo '${{ fromJson(steps.pull_request.outputs.data)[0].head.label }}'
+      - run: echo '${{ toJson(steps.pull_request.outputs.data }}'
