--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -30,4 +30,4 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
 
-      - run: python -c 'import json; json.loads(${{ toJson(steps.pull_request.outputs.data) }})'
+      - run: python -c 'import json; print(json.loads(${{ toJson(steps.pull_request.outputs.data) }}))'
