--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,46 +6,10 @@ on:
       - main
 
 jobs:
-  embed-tester:
-    name: Test GitHub Embed Action
+  test-job:
+    name: Test Action Environment
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get Pull Request Information
-        uses: octokit/request-action@v2.0.2
-        id: pull_request
-        with:
-          route: GET /repos/{owner}/{repo}/pulls
-          owner: python-discord
-          repo: sir-lancebot
-          state: open
-          head: Vthechamp22:master
-          sort: updated
-          direction: desc
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Send an informational status embed to Discord instead of the
-      # standard embeds that Discord sends. This embed will contain
-      # more information and we can fine tune when we actually want
-      # to send an embed.
-      - name: GitHub Actions Status Embed for Discord
-        uses: SebastiaanZ/github-status-embed-for-discord@sebastiaan/bug/incorrect-json-escape
-        with:
-          # Our GitHub Actions webhook
-          webhook_id: '784184528997842985'
-          webhook_token: abcdefghijklmnop
-
-          # Information about the current workflow
-          workflow_name: ${{ github.workflow }}
-          run_id: ${{ github.run_id }}
-          run_number: ${{ github.run_number }}
-          status: ${{ job.status }}
-          actor: ${{ github.actor }}
-          repository:  ${{ github.repository }}
-          ref: ${{ github.ref }}
-          sha: ${{ github.sha }}
-
-          pull_request_payload: ${{ steps.pull_request.outputs.data }}
-          dry_run: 1
-          debug: 1
+      - name: Test Action
+        uses: SebastiaanZ/actions-playground@main
