--- a/action.yaml
+++ b/action.yaml
@@ -4,5 +4,5 @@ description: 'Test how the environment works'
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ toJson(github) }}.
+    - run: echo 'Hello ${{ toJson(github) }}.'
       shell: bash
